# printer_triangulator

./: .gitignore  Kismet-20250311-19-33-49-1.kismet  Kismet-20250311-19-33-58-1.kismet  Kismet-20250311-19-44-16-1.kismet  Kismet-20250311-19-48-38-1.kismet  Kismet-20250311-19-51-30-1.kismet  LICENSE  README.md  airport_data.json  airport_scanner.py  main.py  network_data.json  notes.txt  pyproject.toml  scanner.py  script.py  triangulate.py
printer-triangulator/printer-triangulator/: main.swift
printer-triangulator/printer-triangulator.xcodeproj/: project.pbxproj
printer-triangulator/printer-triangulator.xcodeproj/project.xcworkspace/xcuserdata/sol.xcuserdatad/: UserInterfaceState.xcuserstate
printer-triangulator/printer-triangulator.xcodeproj/xcuserdata/sol.xcuserdatad/xcschemes/: xcschememanagement.plist
src/airportcli/: __init__.py  cli.py  scanner.py
